--- a/ship-details.html
+++ b/ship-details.html
@@ -6,6 +6,7 @@
   <title>Ship Details | CruiseTheGreek</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cruise-details.css">
 
   <style>
     body {
@@ -185,6 +186,8 @@
         margin-top: 40px;
       }
     }
+
+    
 /* ===== CABINS SECTION ===== */
 .cabins-section {
   width: 100%;
