--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
   </div>
 </footer>
 
+<!-- ======== BOOKING CALENDAR MODAL ======== -->
+<div id="bookingModal" class="modal">
+  <div class="modal-content booking-box">
+    <span class="close-btn">&times;</span>
+    <h2 id="bookingTitle">Επιλέξτε ημερομηνία αναχώρησης</h2>
+    <p>Βρείτε τις διαθέσιμες αναχωρήσεις με <strong style="color:#ff6600;">πορτοκαλί</strong> ένδειξη.</p>
+    <div id="calendarContainer"></div>
+    <button id="continueBooking" class="book-btn">Continue</button>
+  </div>
+</div>
+
 
 
   <!------------------------------------------------- SCRIPTS ---------------------------------------------------->
@@ -737,6 +748,160 @@ document.getElementById("searchForm").addEventListener("submit", e => {
 
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+
+<script>
+document.addEventListener("click", e => {
+  const btn = e.target.closest(".book-btn");
+  if (!btn) return; // Αν δεν πατήθηκε Book Now, σταμάτα
+
+  const card = btn.closest(".card");
+  if (!card) return;
+
+  const title =
+    card.querySelector(".package-title, .cruise-title")?.textContent.trim() || "Cruise";
+
+  // Παίρνουμε τις ημερομηνίες αναχώρησης από το dropdown της κάρτας
+  const availableDates = Array.from(card.querySelectorAll(".date-select option"))
+    .slice(1)
+    .map(o => o.textContent.trim())
+    .filter(Boolean);
+
+  if (availableDates.length === 0) {
+    alert("Δεν υπάρχουν διαθέσιμες ημερομηνίες για αυτό το cruise.");
+    return;
+  }
+
+  // ✅ Κλήση της συνάρτησης για να εμφανίσει το ημερολόγιο
+  showCalendarModal(title, availableDates);
+});
+</script>
+
+
+<script>
+  //script for book calendar
+function showCalendarModal(title, availableDates) {
+  const modal = document.getElementById("bookingModal");
+  const container = document.getElementById("calendarContainer");
+  const titleEl = document.getElementById("bookingTitle");
+  titleEl.textContent = `Book: ${title}`;
+  modal.style.display = "flex";
+
+  // 🔸 Αντιστοίχιση συντομογραφιών μηνών
+  const monthMap = {
+    Jan: 0, Feb: 1, Mar: 2, Apr: 3, May: 4, Jun: 5,
+    Jul: 6, Aug: 7, Sep: 8, Oct: 9, Nov: 10, Dec: 11
+  };
+
+  // 🔹 Μετατροπή των διαθέσιμων ημερομηνιών σε αντικείμενα Date
+  const parsedDates = availableDates.map(d => {
+    const [day, mon, year] = d.split(" ");
+    const month = monthMap[mon];
+    if (month === undefined) return null;
+    return new Date(year, month, parseInt(day));
+  }).filter(Boolean);
+
+  // 🔹 Αν υπάρχει διαθέσιμη ημερομηνία → ξεκίνα από εκείνον τον μήνα
+  let current = parsedDates.length > 0 ? new Date(parsedDates[0]) : new Date();
+
+  function renderCalendar(month, year) {
+    container.innerHTML = "";
+
+    const monthNames = [
+      "January","February","March","April",
+      "May","June","July","August",
+      "September","October","November","December"
+    ];
+    const days = ["SUN","MON","TUE","WED","THU","FRI","SAT"];
+
+    // === HEADER ===
+    const header = document.createElement("div");
+    header.className = "calendar-header";
+    header.innerHTML = `
+      <button id="prevMonth">&#10094;</button>
+      <div><strong>${monthNames[month]} ${year}</strong></div>
+      <button id="nextMonth">&#10095;</button>
+    `;
+    container.appendChild(header);
+
+    // === GRID ===
+    const grid = document.createElement("div");
+    grid.className = "calendar-grid";
+
+    // Ονόματα ημερών
+    days.forEach(d => {
+      const dayName = document.createElement("div");
+      dayName.className = "day-name";
+      dayName.textContent = d;
+      grid.appendChild(dayName);
+    });
+
+    const firstDay = new Date(year, month, 1).getDay();
+    const totalDays = new Date(year, month + 1, 0).getDate();
+
+    // Κενά πριν την 1η του μήνα
+    for (let i = 0; i < firstDay; i++) grid.appendChild(document.createElement("div"));
+
+    // Ημέρες του μήνα
+    for (let day = 1; day <= totalDays; day++) {
+      const cell = document.createElement("div");
+      cell.className = "day";
+      cell.textContent = day;
+
+      // Έλεγχος αν είναι διαθέσιμη ημερομηνία
+      const isAvailable = parsedDates.some(d =>
+        d.getDate() === day && d.getMonth() === month && d.getFullYear() === year
+      );
+
+      if (isAvailable) {
+        cell.classList.add("available");
+        cell.addEventListener("click", () => {
+          document.querySelectorAll(".calendar-grid .available").forEach(c => c.classList.remove("selected"));
+          cell.classList.add("selected");
+          cell.dataset.selectedDate = `${day} ${monthNames[month]} ${year}`;
+        });
+      }
+
+      grid.appendChild(cell);
+    }
+
+    container.appendChild(grid);
+
+    // Εναλλαγή μηνών
+    document.getElementById("prevMonth").onclick = () => {
+      current.setMonth(current.getMonth() - 1);
+      renderCalendar(current.getMonth(), current.getFullYear());
+    };
+    document.getElementById("nextMonth").onclick = () => {
+      current.setMonth(current.getMonth() + 1);
+      renderCalendar(current.getMonth(), current.getFullYear());
+    };
+  }
+
+  renderCalendar(current.getMonth(), current.getFullYear());
+
+  // === Κλείσιμο modal ===
+  document.querySelector(".close-btn").onclick = () => (modal.style.display = "none");
+  window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
+
+  document.getElementById("continueBooking").onclick = () => {
+  const selected = document.querySelector(".calendar-grid .selected");
+  if (!selected) {
+    alert("please choose a date!");
+    return;
+  }
+
+  const chosen = selected.dataset.selectedDate;
+  const cruiseTitle = document.getElementById("bookingTitle").textContent.replace("Book: ", "");
+
+  // ✅ Αποθήκευση στοιχείων για χρήση στο booking.html
+  localStorage.setItem("selectedDate", chosen);
+  localStorage.setItem("selectedCruise", cruiseTitle);
+
+  // Μετάβαση στη σελίδα κράτησης
+  window.location.href = "booking.html";
+};
+}
+</script>
 
 </body>
 </html>
