--- a/package-details.html
+++ b/package-details.html
@@ -1717,7 +1717,7 @@ document.addEventListener("DOMContentLoaded", () => {
       const chosen = selected.dataset.selectedDate;
       const packageTitle = document.getElementById("bookingTitle").textContent.replace("Book: ", "");
 
-      // ✅ αποθήκευση σωστά για booking.html
+      //  αποθήκευση σωστά για booking.html
       localStorage.setItem("selectedDate", chosen);
       localStorage.setItem("selectedPackage", packageTitle);
 
