--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Blog | CruiseTheGreek</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+
   <style>
+
+    
+/* ===== NAVBAR GENERAL ===== */
+header {
+  top: 0;
+  z-index: 1000;       /* να είναι πάντα πάνω από τα υπόλοιπα */
+  background-color: #002b45; /* ίδιο χρώμα με το navbar */
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #002b45;
+  padding: 6px 20px;
+  color: white;
+  z-index: 1000;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+}
+@media (max-width: 768px) {
+  header {
+    position: sticky;
+    top: 0;
+  }
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.nav-links {
+  display: flex;
+  gap: 25px;
+  list-style: none;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.nav-links a:hover {
+  color: #ff6600;
+}
+
+/* ===== MOBILE MENU ===== */
+.menu-toggle {
+  display: none;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 26px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    z-index: 1100;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background: #002b45;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    padding: 20px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .nav-links li {
+    padding: 10px 0;
+  }
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #002b45;
@@ -214,6 +300,133 @@ body {
   font-weight: 600;
 }
 
+
+/* ===== FOOTER ===== */
+.footer {
+  background-color: #001a33;
+  color: white;
+  padding: 50px 60px 20px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  gap: 30px;
+  margin-bottom: 20px;
+}
+
+.footer-logo {
+  font-size: 22px;
+  color: white;
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+
+.footer-phone {
+  color: #ff6600;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.footer-col h4 {
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #fff;
+  border-bottom: 2px solid #ff6600;
+  display: inline-block;
+  padding-bottom: 3px;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-col ul li {
+  margin: 5px 0;
+}
+
+.footer-col ul li a {
+  color: #cdd9f0;
+  text-decoration: none;
+  font-size: 13px;
+  transition: color 0.3s;
+}
+
+.footer-col ul li a:hover {
+  color: #ff6600;
+}
+
+/* Newsletter form */
+.newsletter-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 15px;
+}
+
+.newsletter-form input {
+  padding: 8px 10px;
+  border-radius: 4px;
+  border: none;
+  font-size: 13px;
+}
+
+.newsletter-form button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.newsletter-form button:hover {
+  background-color: #0056b3;
+}
+
+/* GNTO logo */
+.footer-gnto {
+  height: 40px;
+  margin-top: 10px;
+}
+
+.footer-gnto-code {
+  font-size: 12px;
+  color: #cdd9f0;
+  margin-top: 4px;
+}
+
+/* Κάτω γραμμή */
+.footer-bottom {
+  text-align: center;
+  border-top: 1px solid rgba(255,255,255,0.2);
+  padding-top: 15px;
+  font-size: 13px;
+  color: #aaa;
+}
+
+.footer-bottom span {
+  color: #ff6600;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .footer {
+    text-align: center;
+    padding: 40px 20px;
+  }
+  .newsletter-form {
+    align-items: center;
+  }
+}
+
+
   </style>
 </head>
 <body>
@@ -230,7 +443,6 @@ body {
       <li><a href="ships.html">CRUISE SHIPS</a></li>
       <li><a href="destinations.html">DESTINATIONS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
-      <li><a href="blog.html" class="active">BLOG</a></li>
     </ul>
   </nav>
 </header>
